Set getActionUpdateThread() for all AnAction classes
Apparently some of these were missed in earlier attempts.